--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
     ],
     "require": {
         "laravel/framework": "^10.10",
-        "php": "^8.1"
+        "php": "^8.1",
+        "staudenmeir/laravel-adjacency-list": "^1.0"
     },
     "extra": {
         "laravel": {
